--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@oclif/core": "^2",
     "@oclif/plugin-help": "^5",
     "@oclif/plugin-plugins": "^3.2.6",
-    "chalk": "^4.1.2"
+    "chalk": "^4.1.2",
+    "cosmiconfig": "^8.2.0",
+    "js-yaml": "^4.1.0"
   },
   "devDependencies": {
     "@oclif/test": "^2.4.4",
