--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@oclif/core": "^2",
     "@oclif/plugin-help": "^5",
     "@oclif/plugin-plugins": "^3.2.6",
+    "@types/inquirer": "^9.0.3",
     "chalk": "^4.1.2",
     "cosmiconfig": "^8.2.0",
+    "inquirer": "^8.2.6",
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
