--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "chalk": "^4.1.2",
     "cosmiconfig": "^8.2.0",
     "inquirer": "^8.2.6",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "sinon": "^15.2.0"
   },
   "devDependencies": {
     "@oclif/test": "^2.4.5",
